--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
+    "mongoose": "^7.5.1",
+    "nodemailer": "^6.9.4"
   }
 }
