--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
-    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.4"
