--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "firebase-admin": "^12.4.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.1",
+    "mockingoose": "^2.16.2",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.4"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^4.3.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.0",
+    "mongoose": "^8.6.3",
+    "supertest": "^7.0.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
