--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^7.4.0",
     "firebase-admin": "^12.4.0",
     "helmet": "^7.2.0",
+    "helmet-csp": "^4.0.0",
     "jsonwebtoken": "^9.0.2",
     "mockingoose": "^2.16.2",
     "node-fetch": "^2.7.0",
