--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mockingoose": "^2.16.2",
     "node-fetch": "^2.7.0",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "stripe": "^17.3.1"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.3.2",
@@ -27,6 +28,7 @@
     "supertest": "^7.0.0"
   },
   "scripts": {
+    "pretest": "node scripts/downloadMongo.js",
     "test": "jest"
   }
 }
